--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">网易云音乐</string>
+    <string name="login">登录</string>
     <string name="login_by_email">网易邮箱登录</string>
     <string name="login_by_phone">手机号登录</string>
+    <string name="please_input_password">请输入密码</string>
+    <string name="please_input_phone">请输入手机号</string>
+    <string name="please_input_email">请输入网易邮箱</string>
+    <string name="err_email">邮箱格式错误</string>
+    <string name="null_password">请输入密码</string>
+    <string name="please_waiting">正在加载，请稍后……</string>
     <string name="privacy_and_agreement">同意《用户协议》《隐私政策》《儿童隐私政策》</string>
 
     <string name="permission_explain">权限说明</string>
