--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">网易云音乐</string>
+    <string name="app_name">气泡音乐</string>
     <string name="login">登录</string>
     <string name="login_by_email">网易邮箱登录</string>
     <string name="login_by_phone">手机号登录</string>
