切换服务器，调整登录页登录策略

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="null_password">请输入密码</string>
     <string name="please_waiting">正在加载，请稍后……</string>
     <string name="privacy_and_agreement">同意《用户协议》《隐私政策》《儿童隐私政策》</string>
+    
+    <string name="unknown_err">未知错误，请稍后重试！</string>
 
     <string name="permission_explain">权限说明</string>
 
